[gd_scene load_steps=4 format=3 uid="uid://ddkq8icmdysac"]

[ext_resource type="Script" uid="uid://be4shidypnsl0" path="res://TrapsGame/saw.gd" id="1_eilpg"]
[ext_resource type="Texture2D" uid="uid://5yqlida7hamy" path="res://Assets_PixelAdventure/Traps/Saw/Off.png" id="1_fwp4y"]
[ext_resource type="PackedScene" uid="uid://b128k8wr8md7w" path="res://TrapsGame/dmg_player.tscn" id="3_3sjf6"]

[node name="Saw" type="Node2D"]
script = ExtResource("1_eilpg")

[node name="CurrentSaw" type="Node2D" parent="."]

[node name="SpriteOff" type="Sprite2D" parent="CurrentSaw"]
position = Vector2(-1, 0)
texture = ExtResource("1_fwp4y")

[node name="dmgPlayer" parent="CurrentSaw" instance=ExtResource("3_3sjf6")]

[node name="Path2D" type="Path2D" parent="."]

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[connection signal="body_entered" from="CurrentSaw/dmgPlayer" to="." method="_on_dmg_player_body_entered"]
